2004-07-31 15:19  PeterB

	* src/: balsa-app.h, balsa-index.c, filter-run-dialog.c,
	main-window.c, main.c, pref-manager.c, save-restore.c,
	sendmsg-window.c: new close-mailbox api; remove auto-commit and
	commit-all, and replace commit with expunge; implement
	expunge_on_close.
	* libbalsa/send.c: new close-mailbox api.
	* libbalsa/: mailbox.c, mailbox.h, mailbox_imap.c, mailbox_local.c,
	mailbox_maildir.c, mailbox_mbox.c, mailbox_mh.c, mailbox_pop3.c:
	add expunge argument to mailbox-close api, and implement it.
	* doc/C/balsa.xml: replace `commit' with `expunge', and some other
	updates.

2004-07-31 15:05  PeterB

	* libbalsa/mailbox.c: remove a scheduled idle callback if
	libbalsa_mailbox_check is called explicitly.
	* libbalsa/send.c: restore checking the outbox--we can't wait for
	the idle callback.

2004-07-31  Pawel Salek

	* libbalsa/imap-server.c: get the TLS mode right from the config.
	* libbalsa/message.c: tune up libbalsa_message_has_attachment().

2004-07-30  Pawel Salek

	* README, NEWS, configure.in: release 2.2.1
	
2004-07-29  Pawel Salek

	* balsa.spec.in: switch ssl on in binaries.
	* doc/C/balsa.xml: document advanced IMAP folder configuration.
	* libbalsa/message.c: trying to set references again is ok.
	* libbalsa/mailbox.c: set default view to flat index.
	* src/folder-conf.c: fix crash on new folder configuration caused
	by persistent cache code.
	
2004-07-29 17:03  PeterB

	* src/folder-conf.c: non-modal folder properties dialog.
	* src/main-window.c: set sensitivity of next/previous/next-unread
	message menu items.
	* src/main-window.c: remove weak pointer when clearing
	window->current_message.
	* src/balsa-index.c: blank the display when next/previous fails
	only in select-next-threaded, that is, only after deleting the last
	message.
	* src/balsa-message.c: fetch all headers, all the time.
	* libbalsa/: message.c, send.c: remove calls to
	libbalsa_mailbox_check--now handled by mailbox.c