@@ -141,9 +141,9 @@ dnl ###########################################################################
 AC_ARG_ENABLE(flock,
         AS_HELP_STRING([--enable-flock],
                        [Do NOT use flock() to lock files (default=no)]),
-	[if test $enableval = no; then balsa_cv_flock=no; fi])
+	[if test x$enableval = xno; then balsa_cv_flock=no; fi])
 
-if test $balsa_cv_flock = yes; then
+if test x$balsa_cv_flock = xyes; then
 	AC_DEFINE(USE_FLOCK,1,[Define if flock locking should be used.])
 fi
 
@@ -151,8 +151,8 @@ balsa_cv_fcntl=yes
 AC_ARG_ENABLE(fcntl,
         AS_HELP_STRING([--disable-fcntl],
                        [Use fcntl() to lock files (default=yes)]),
-	[if test $enableval = no; then balsa_cv_fcntl=no; fi])
-if test $balsa_cv_fcntl = yes; then
+	[if test x$enableval = no; then balsa_cv_fcntl=no; fi])
+if test x$balsa_cv_fcntl = xyes; then
 	AC_DEFINE(USE_FCNTL,1,[Define if fcntl locking should be used.])
 fi
 
@@ -229,11 +229,6 @@ AC_ARG_ENABLE([smime],
                        [include S/MIME support (needs gpgme and gpgsm, experimental) (default=no)]),
 	[ have_smime=$withval ], [ have_smime=no ])
 
-if test x"$gpgmecfg" != xno ; then
-	AC_MSG_RESULT(yes)
-else
-	AC_MSG_RESULT($gpgmecfg)
-fi
 if test x"$gpgmecfg" = xyes ; then
 	AC_PATH_PROG(gpgmecfg, gpgme-config, no)
 fi
